compiler dragon/y.output
Terminals which are not used

   NUMBER
   LT
   LE
   GT
   GE
   EQ
   NEQ
   OR
   PLUS
   MINUS
   AND
   STAR
   SLASH
   DIV
   MOD
   CHAR
   STRING
   BOOLEAN
   READ
   WRITE
   EMTPY
   CONDITIONAL
   TYPE
   NAME
   LIST
   ARRAY_ACCESS
   ARRAY_RANGE
   STATEMENT
   FUNCTION_CALL
   PROCEDURE_CALL
   WHILE_DO
   DECL
   SUBDECL
   SUBDECLS
   SUBPROGDECL
   SUBPROGDECLHEAD
   SUBPROGDECLBODY
   LOCAL
   PARAMETER
   IDLIST
   EXPR
   EXPRLIST
   PARALIST
   ARGLIST
   DECLIST
   STATLIST
   PROCSTAT
   COMPSTAT


Grammar

    0 $accept: program $end

    1 @1: /* empty */

    2 program: @1 PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'

    3 identifier_list: ID
    4                | identifier_list ',' ID

    5 declarations: declarations VAR identifier_list ':' type ';'
    6             | /* empty */

    7 type: standard_type
    8     | ARRAY '[' INUM DOTDOT INUM ']' OF standard_type

    9 standard_type: INTEGER
   10              | REAL

   11 subprogram_declarations: subprogram_declarations subprogram_declaration ';'
   12                        | /* empty */

   13 subprogram_declaration: subprogram_head declarations subprogram_declarations compound_statement

   14 @2: /* empty */

   15 subprogram_head: FUNCTION ID @2 arguments ':' standard_type ';'

   16 @3: /* empty */

   17 subprogram_head: PROCEDURE ID @3 arguments ';'

   18 arguments: '(' parameter_list ')'
   19          | /* empty */

   20 parameter_list: identifier_list ':' type
   21               | parameter_list ';' identifier_list ':' type

   22 compound_statement: BBEGIN optional_statements END

   23 optional_statements: statement_list
   24                    | /* empty */

   25 statement_list: statement
   26               | statement_list ';' statement

   27 statement: conditions
   28          | ifelse

   29 conditions: variable ASSIGNOP expression
   30           | procedure_statement
   31           | compound_statement
   32           | IF expression THEN conditions ELSE conditions
   33           | WHILE expression DO conditions
   34           | FOR ID ASSIGNOP expression TO expression DO conditions

   35 ifelse: IF expression THEN statement
   36       | IF expression THEN conditions ELSE ifelse

   37 variable: ID
   38         | ID '[' expression ']'

   39 procedure_statement: ID
   40                    | ID '(' expression_list ')'

   41 expression_list: expression
   42                | expression_list ',' expression

   43 expression: simple_expression
   44           | simple_expression RELOP simple_expression

   45 simple_expression: term
   46                  | ADDOP term
   47                  | simple_expression ADDOP term

   48 term: factor
   49     | term MULOP factor

   50 factor: ID
   51       | ID '(' expression_list ')'
   52       | ID '[' expression_list ']'
   53       | INUM
   54       | RNUM
   55       | '(' expression ')'
   56       | NOT factor


Terminals, with rules where they appear

$end (0) 0
'(' (40) 2 18 40 51 55
')' (41) 2 18 40 51 55
',' (44) 4 42
'.' (46) 2
':' (58) 5 15 20 21
';' (59) 2 5 11 15 17 21 26
'[' (91) 8 38 52
']' (93) 8 38 52
error (256)
NUMBER (258)
INUM (259) 8 53
RNUM (260) 54
ID (261) 2 3 4 15 17 34 37 38 39 40 50 51 52
NOT (262) 56
ASSIGNOP (263) 29 34
RELOP (264) 44
LT (265)
LE (266)
GT (267)
GE (268)
EQ (269)
NEQ (270)
ADDOP (271) 46 47
OR (272)
PLUS (273)
MINUS (274)
MULOP (275) 49
AND (276)
STAR (277)
SLASH (278)
DIV (279)
MOD (280)
PROGRAM (281) 2
VAR (282) 5
ARRAY (283) 8
OF (284) 8
DOTDOT (285) 8
INTEGER (286) 9
REAL (287) 10
CHAR (288)
STRING (289)
BOOLEAN (290)
FUNCTION (291) 15
PROCEDURE (292) 17
READ (293)
WRITE (294)
BBEGIN (295) 22
END (296) 22
IF (297) 32 35 36
THEN (298) 32 35 36
ELSE (299) 32 36
WHILE (300) 33
DO (301) 33 34
FOR (302) 34
TO (303) 34
EMTPY (304)
CONDITIONAL (305)
TYPE (306)
NAME (307)
LIST (308)
ARRAY_ACCESS (309)
ARRAY_RANGE (310)
STATEMENT (311)
FUNCTION_CALL (312)
PROCEDURE_CALL (313)
WHILE_DO (314)
DECL (315)
SUBDECL (316)
SUBDECLS (317)
SUBPROGDECL (318)
SUBPROGDECLHEAD (319)
SUBPROGDECLBODY (320)
LOCAL (321)
PARAMETER (322)
IDLIST (323)
EXPR (324)
EXPRLIST (325)
PARALIST (326)
ARGLIST (327)
DECLIST (328)
STATLIST (329)
PROCSTAT (330)
COMPSTAT (331)


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
program (86)
    on left: 2, on right: 0
@1 (87)
    on left: 1, on right: 2
identifier_list (88)
    on left: 3 4, on right: 2 4 5 20 21
declarations (89)
    on left: 5 6, on right: 2 5 13
type (90)
    on left: 7 8, on right: 5 20 21
standard_type (91)
    on left: 9 10, on right: 7 8 15
subprogram_declarations (92)
    on left: 11 12, on right: 2 11 13
subprogram_declaration (93)
    on left: 13, on right: 11
subprogram_head (94)
    on left: 15 17, on right: 13
@2 (95)
    on left: 14, on right: 15
@3 (96)
    on left: 16, on right: 17
arguments (97)
    on left: 18 19, on right: 15 17
parameter_list (98)
    on left: 20 21, on right: 18 21
compound_statement (99)
    on left: 22, on right: 2 13 31
optional_statements (100)
    on left: 23 24, on right: 22
statement_list (101)
    on left: 25 26, on right: 23 26
statement (102)
    on left: 27 28, on right: 25 26 35
conditions (103)
    on left: 29 30 31 32 33 34, on right: 27 32 33 34 36
ifelse (104)
    on left: 35 36, on right: 28 36
variable (105)
    on left: 37 38, on right: 29
procedure_statement (106)
    on left: 39 40, on right: 30
expression_list (107)
    on left: 41 42, on right: 40 42 51 52
expression (108)
    on left: 43 44, on right: 29 32 33 34 35 36 38 41 42 55
simple_expression (109)
    on left: 45 46 47, on right: 43 44 47
term (110)
    on left: 48 49, on right: 45 46 47 49
factor (111)
    on left: 50 51 52 53 54 55 56, on right: 48 49 56


state 0

    0 $accept: . program $end

    $default  reduce using rule 1 (@1)

    program  go to state 1
    @1       go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    2 program: @1 . PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'

    PROGRAM  shift, and go to state 4


state 3

    0 $accept: program $end .

    $default  accept


state 4

    2 program: @1 PROGRAM . ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'

    ID  shift, and go to state 5


state 5

    2 program: @1 PROGRAM ID . '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'

    '('  shift, and go to state 6


state 6

    2 program: @1 PROGRAM ID '(' . identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'

    ID  shift, and go to state 7

    identifier_list  go to state 8


state 7

    3 identifier_list: ID .

    $default  reduce using rule 3 (identifier_list)


state 8

    2 program: @1 PROGRAM ID '(' identifier_list . ')' ';' declarations subprogram_declarations compound_statement '.'
    4 identifier_list: identifier_list . ',' ID

    ')'  shift, and go to state 9
    ','  shift, and go to state 10


state 9

    2 program: @1 PROGRAM ID '(' identifier_list ')' . ';' declarations subprogram_declarations compound_statement '.'

    ';'  shift, and go to state 11


state 10

    4 identifier_list: identifier_list ',' . ID

    ID  shift, and go to state 12


state 11

    2 program: @1 PROGRAM ID '(' identifier_list ')' ';' . declarations subprogram_declarations compound_statement '.'

    $default  reduce using rule 6 (declarations)

    declarations  go to state 13


state 12

    4 identifier_list: identifier_list ',' ID .

    $default  reduce using rule 4 (identifier_list)


state 13

    2 program: @1 PROGRAM ID '(' identifier_list ')' ';' declarations . subprogram_declarations compound_statement '.'
    5 declarations: declarations . VAR identifier_list ':' type ';'

    VAR  shift, and go to state 14

    $default  reduce using rule 12 (subprogram_declarations)

    subprogram_declarations  go to state 15


state 14

    5 declarations: declarations VAR . identifier_list ':' type ';'

    ID  shift, and go to state 7

    identifier_list  go to state 16


state 15

    2 program: @1 PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations . compound_statement '.'
   11 subprogram_declarations: subprogram_declarations . subprogram_declaration ';'

    FUNCTION   shift, and go to state 17
    PROCEDURE  shift, and go to state 18
    BBEGIN     shift, and go to state 19

    subprogram_declaration  go to state 20
    subprogram_head         go to state 21
    compound_statement      go to state 22


state 16

    4 identifier_list: identifier_list . ',' ID
    5 declarations: declarations VAR identifier_list . ':' type ';'

    ','  shift, and go to state 10
    ':'  shift, and go to state 23


state 17

   15 subprogram_head: FUNCTION . ID @2 arguments ':' standard_type ';'

    ID  shift, and go to state 24


state 18

   17 subprogram_head: PROCEDURE . ID @3 arguments ';'

    ID  shift, and go to state 25


state 19

   22 compound_statement: BBEGIN . optional_statements END

    ID      shift, and go to state 26
    BBEGIN  shift, and go to state 19
    IF      shift, and go to state 27
    WHILE   shift, and go to state 28
    FOR     shift, and go to state 29

    $default  reduce using rule 24 (optional_statements)

    compound_statement   go to state 30
    optional_statements  go to state 31
    statement_list       go to state 32
    statement            go to state 33
    conditions           go to state 34
    ifelse               go to state 35
    variable             go to state 36
    procedure_statement  go to state 37


state 20

   11 subprogram_declarations: subprogram_declarations subprogram_declaration . ';'

    ';'  shift, and go to state 38


state 21

   13 subprogram_declaration: subprogram_head . declarations subprogram_declarations compound_statement

    $default  reduce using rule 6 (declarations)

    declarations  go to state 39


state 22

    2 program: @1 PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement . '.'

    '.'  shift, and go to state 40


state 23

    5 declarations: declarations VAR identifier_list ':' . type ';'

    ARRAY    shift, and go to state 41
    INTEGER  shift, and go to state 42
    REAL     shift, and go to state 43

    type           go to state 44
    standard_type  go to state 45


state 24

   15 subprogram_head: FUNCTION ID . @2 arguments ':' standard_type ';'

    $default  reduce using rule 14 (@2)

    @2  go to state 46


state 25

   17 subprogram_head: PROCEDURE ID . @3 arguments ';'

    $default  reduce using rule 16 (@3)

    @3  go to state 47


state 26

   37 variable: ID .
   38         | ID . '[' expression ']'
   39 procedure_statement: ID .
   40                    | ID . '(' expression_list ')'

    '('  shift, and go to state 48
    '['  shift, and go to state 49

    ASSIGNOP  reduce using rule 37 (variable)
    $default  reduce using rule 39 (procedure_statement)


state 27

   32 conditions: IF . expression THEN conditions ELSE conditions
   35 ifelse: IF . expression THEN statement
   36       | IF . expression THEN conditions ELSE ifelse

    INUM   shift, and go to state 50
    RNUM   shift, and go to state 51
    ID     shift, and go to state 52
    NOT    shift, and go to state 53
    ADDOP  shift, and go to state 54
    '('    shift, and go to state 55

    expression         go to state 56
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


state 28

   33 conditions: WHILE . expression DO conditions

    INUM   shift, and go to state 50
    RNUM   shift, and go to state 51
    ID     shift, and go to state 52
    NOT    shift, and go to state 53
    ADDOP  shift, and go to state 54
    '('    shift, and go to state 55

    expression         go to state 60
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


state 29

   34 conditions: FOR . ID ASSIGNOP expression TO expression DO conditions

    ID  shift, and go to state 61


state 30

   31 conditions: compound_statement .

    $default  reduce using rule 31 (conditions)


state 31

   22 compound_statement: BBEGIN optional_statements . END

    END  shift, and go to state 62


state 32

   23 optional_statements: statement_list .
   26 statement_list: statement_list . ';' statement

    ';'  shift, and go to state 63

    $default  reduce using rule 23 (optional_statements)


state 33

   25 statement_list: statement .

    $default  reduce using rule 25 (statement_list)


state 34

   27 statement: conditions .

    $default  reduce using rule 27 (statement)


state 35

   28 statement: ifelse .

    $default  reduce using rule 28 (statement)


state 36

   29 conditions: variable . ASSIGNOP expression

    ASSIGNOP  shift, and go to state 64


state 37

   30 conditions: procedure_statement .

    $default  reduce using rule 30 (conditions)


state 38

   11 subprogram_declarations: subprogram_declarations subprogram_declaration ';' .

    $default  reduce using rule 11 (subprogram_declarations)


state 39

    5 declarations: declarations . VAR identifier_list ':' type ';'
   13 subprogram_declaration: subprogram_head declarations . subprogram_declarations compound_statement

    VAR  shift, and go to state 14

    $default  reduce using rule 12 (subprogram_declarations)

    subprogram_declarations  go to state 65


state 40

    2 program: @1 PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.' .

    $default  reduce using rule 2 (program)


state 41

    8 type: ARRAY . '[' INUM DOTDOT INUM ']' OF standard_type

    '['  shift, and go to state 66


state 42

    9 standard_type: INTEGER .

    $default  reduce using rule 9 (standard_type)


state 43

   10 standard_type: REAL .

    $default  reduce using rule 10 (standard_type)


state 44

    5 declarations: declarations VAR identifier_list ':' type . ';'

    ';'  shift, and go to state 67


state 45

    7 type: standard_type .

    $default  reduce using rule 7 (type)


state 46

   15 subprogram_head: FUNCTION ID @2 . arguments ':' standard_type ';'

    '('  shift, and go to state 68

    $default  reduce using rule 19 (arguments)

    arguments  go to state 69


state 47

   17 subprogram_head: PROCEDURE ID @3 . arguments ';'

    '('  shift, and go to state 68

    $default  reduce using rule 19 (arguments)

    arguments  go to state 70


state 48

   40 procedure_statement: ID '(' . expression_list ')'

    INUM   shift, and go to state 50
    RNUM   shift, and go to state 51
    ID     shift, and go to state 52
    NOT    shift, and go to state 53
    ADDOP  shift, and go to state 54
    '('    shift, and go to state 55

    expression_list    go to state 71
    expression         go to state 72
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


state 49

   38 variable: ID '[' . expression ']'

    INUM   shift, and go to state 50
    RNUM   shift, and go to state 51
    ID     shift, and go to state 52
    NOT    shift, and go to state 53
    ADDOP  shift, and go to state 54
    '('    shift, and go to state 55

    expression         go to state 73
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


state 50

   53 factor: INUM .

    $default  reduce using rule 53 (factor)


state 51

   54 factor: RNUM .

    $default  reduce using rule 54 (factor)


state 52

   50 factor: ID .
   51       | ID . '(' expression_list ')'
   52       | ID . '[' expression_list ']'

    '('  shift, and go to state 74
    '['  shift, and go to state 75

    $default  reduce using rule 50 (factor)


state 53

   56 factor: NOT . factor

    INUM  shift, and go to state 50
    RNUM  shift, and go to state 51
    ID    shift, and go to state 52
    NOT   shift, and go to state 53
    '('   shift, and go to state 55

    factor  go to state 76


state 54

   46 simple_expression: ADDOP . term

    INUM  shift, and go to state 50
    RNUM  shift, and go to state 51
    ID    shift, and go to state 52
    NOT   shift, and go to state 53
    '('   shift, and go to state 55

    term    go to state 77
    factor  go to state 59


state 55

   55 factor: '(' . expression ')'

    INUM   shift, and go to state 50
    RNUM   shift, and go to state 51
    ID     shift, and go to state 52
    NOT    shift, and go to state 53
    ADDOP  shift, and go to state 54
    '('    shift, and go to state 55

    expression         go to state 78
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


state 56
